--- a/desprenoi.html
+++ b/desprenoi.html
@@ -23,7 +23,7 @@
         nav {
             background-color: #004080;
             padding: 10px;
-            text-align: center;
+            text-align: right;
         }
 
         nav a {
@@ -73,17 +73,16 @@
 <body>
 
 <header>
+    <nav>
+        <a href="index.html">Acasă</a>
+        <a href="desprenoi.html">Despre noi</a>
+        <a href="contact.html">Contact</a>
+        <a href="contulmeu.html">Contul Meu</a>
+        <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
+    </nav>
     <h1>Primăria Sector 1</h1>
     <h4>România fără dosar</h4>
-    <hr color="white" style="padding-top: 3px; margin-top: 1.5rem; border-radius: 3rem;">
 </header>
-
-<nav>
-    <a href="index.html">Acasă</a>
-    <a href="desprenoi.html">Despre noi</a>
-    <a href="contact.html">Contact</a>
-    <a href="contulmeu.html">Contul Meu</a>
-</nav>
 
 <div class="container">
     <h2>Despre noi</h2>
