--- a/inregistrarecont.html
+++ b/inregistrarecont.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="desprenoi.html">Despre noi</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="www.ghiseul.ro">Ghiseul.ro</a></li>
+                <li><a href="https://www.ghiseul.ro">Ghiseul.ro</a></li>
     
             </ul>
         </nav>
