--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
 
 <header>
-    <h1>Primăria Sectorului 1</h1>
-    <h4 class="h4top">România fară dosar</h4>
-    <hr color="white" style="padding-top: 3px; margin-top: 1.5rem; border-radius: 3rem;">
     <nav class="navbar">
         <ul>
             <li><a href="desprenoi.html">Despre noi</a></li>
+            <li><a href="comunicate.html">Comunicate de presa</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="www.ghiseul.ro">Ghiseul.ro</a></li>
+            <li><a href="https://www.ghiseul.ro">Ghiseul.ro</a></li>
 
         </ul>
     </nav>
+    <h1>Primăria Sectorului 1</h1>
+    <h4 class="h4top">România fară dosar</h4>
 </header>
 
 <main>
