--- a/comunicate.html
+++ b/comunicate.html
@@ -99,7 +99,7 @@
 
 <div class="container">
     <h2>Teatrul de Vara va fi reabilitat</h2>
-    <img src="/22563704_1446527212051669_321062853_o-1024x685.jpg" alt="Teatrul Masca" class="comunicat-img">
+    <img src="https://biseq12.github.io/faradosar/22563704_1446527212051669_321062853_o-1024x685.jpg" alt="Teatrul Masca" class="comunicat-img">
     <div class="content">
         <p>
             În urma numeroaselor sesizări primite prin intermediul platformei noastre online, Primăria Sectorului 1 anunță
@@ -128,29 +128,30 @@
 </div>
 
 <div class="container">
-    <h2>Recondiționarea Gării de Nord</h2>
-    <img src="/577982aa-f144-4477-9cf8-2055592b13d5.jpg" alt="Gara de Nord" class="comunicat-img">
+    <h2>Recondiționarea Pieței Pajura</h2>
+    <img src="https://biseq12.github.io/faradosar/577982aa-f144-4477-9cf8-2055592b13d5.jpg" alt="Piața Pajura" class="comunicat-img">
     <div class="content">
         <p>
             În urma semnalărilor repetate venite de la cetățeni prin platforma noastră <strong>„România fără dosar”</strong>, Primăria Sectorului 1 
-            anunță inițierea unui amplu proces de recondiționare a Gării de Nord – un punct esențial de transport și un simbol al capitalei.
+            anunță inițierea unui amplu proces de recondiționare a Pieței Pajura – un loc esențial pentru locuitorii din zonă și un punct de interes 
+            al capitalei.
         </p>
         <p>
-            Gara de Nord se confruntă de ani de zile cu probleme grave de infrastructură, igienă și accesibilitate. Mulți bucureșteni și turiști 
-            au sesizat degradarea constantă a acestui obiectiv, motiv pentru care autoritățile locale au decis să acționeze rapid și eficient.
+            Piața Pajura se confruntă cu probleme grave de infrastructură și accesibilitate, iar mulți cetățeni au sesizat starea proastă a acestui spațiu 
+            public. De aceea, autoritățile locale au decis să acționeze rapid și eficient pentru a îmbunătăți condițiile de utilizare și estetică.
         </p>
         <p>
-            Recondiționarea va cuprinde lucrări de modernizare a peroanelor, refacerea fațadei istorice, reabilitarea instalațiilor electrice 
-            și sanitare, precum și implementarea unor soluții digitale pentru facilitarea transportului. Vor fi avute în vedere și măsuri 
-            pentru siguranța și confortul călătorilor.
+            Recondiționarea va include lucrări de modernizare a trotuarelor, refacerea zonelor verzi, instalarea de noi sisteme de iluminat public și 
+            implementarea unor soluții de accesibilitate pentru persoanele cu mobilitate redusă. De asemenea, vor fi aduse îmbunătățiri pentru siguranța 
+            și confortul locuitorilor.
         </p>
         <p>
-            Această intervenție este realizată în parteneriat cu autoritățile feroviare naționale, dar este susținută activ de administrația 
-            locală a Sectorului 1, care și-a asumat rolul de a contribui la revitalizarea unor spații publice de importanță majoră.
+            Această intervenție va fi realizată cu sprijinul administrației locale și în colaborare cu autoritățile competente, având ca scop revitalizarea 
+            Pieței Pajura, un spațiu care joacă un rol important în viața comunității din Sectorul 1.
         </p>
         <p>
-            Le mulțumim tuturor celor care au sesizat această nevoie urgentă. Recondiționarea Gării de Nord este mai mult decât o investiție 
-            în infrastructură – este un pas spre un oraș mai civilizat, mai primitor și mai conectat la nevoile reale ale oamenilor.
+            Le mulțumim tuturor celor care au semnalat necesitatea acestei intervenții. Recondiționarea Pieței Pajura este un pas important spre un oraș 
+            mai curat, mai funcțional și mai prietenos cu cetățenii săi.
         </p>
         <p style="text-align: right; margin-top: 30px;">
             <strong>Primăria Sectorului 1</strong>
@@ -158,9 +159,10 @@
     </div>
 </div>
 
+
 <div class="container">
     <h2>Schimbarea liniilor de tramvai</h2>
-    <img src="/318897864_558122559659700_6171348106569020947_n.jpeg" alt="Linii de tramvai" class="comunicat-img">
+    <img src="https://biseq12.github.io/faradosar/318897864_558122559659700_6171348106569020947_n.jpeg" alt="Linii de tramvai" class="comunicat-img">
     <div class="content">
         <p>
             În urma sesizărilor primite prin platforma <strong>„România fără dosar”</strong> și a inspecțiilor efectuate în teren, 
@@ -190,7 +192,7 @@
 
 <div class="container">
     <h2>Reasfaltarea străzilor Ion Mihalache</h2>
-    <img src="/WhatsApp-Image-2022-10-19-at-11.52.48-AM-2.jpeg" alt="Străzile Ion Mihalache" class="comunicat-img">
+    <img src="https://biseq12.github.io/faradosar/WhatsApp-Image-2022-10-19-at-11.52.48-AM-2.jpeg" alt="Străzile Ion Mihalache" class="comunicat-img">
     <div class="content">
         <p>
             În urma sesizărilor primite prin intermediul platformei <strong>„România fără dosar”</strong>, Primăria Sectorului 1 anunță demararea procesului de reasfaltare a străzilor din cartierul Ion Mihalache. Această zonă a fost semnalată de locuitori ca având o infrastructură rutieră deteriorată, care afectează atât siguranța traficului, cât și confortul locatarilor.
