--- a/comunicate.html
+++ b/comunicate.html
@@ -90,7 +90,7 @@
         <a href="desprenoi.html">Despre noi</a>
         <a href="contact.html">Contact</a>
         <a href="contulmeu.html">Contul Meu</a>
-        <li><a href="https://www.ghiseul.ro">Ghiseul.ro</a></li>
+        <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
     </nav>
     <h1>Primăria Sector 1</h1>
     <h4>România fără dosar</h4>
