--- a/comunicate.html
+++ b/comunicate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comunicat de Presă - Teatrul Masca</title>
+    <title>Comunicate de Presă - România fără dosar</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,6 +62,23 @@
         .content {
             text-align: justify;
             color: #333;
+            display: none;
+        }
+
+        .toggle-button {
+            display: block;
+            margin: 0 auto 20px;
+            padding: 10px 20px;
+            background-color: #004080;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .toggle-button:hover {
+            background-color: #003060;
         }
 
         footer {
@@ -96,10 +113,11 @@
     <h4>România fără dosar</h4>
 </header>
 
-
+<!-- Comunicat 1 -->
 <div class="container">
-    <h2>Teatrul de Vara va fi reabilitat</h2>
+    <h2>Teatrul de Vară vă fi reabilitat</h2>
     <img src="https://biseq12.github.io/faradosar/22563704_1446527212051669_321062853_o-1024x685.jpg" alt="Teatrul Masca" class="comunicat-img">
+    <button onclick="toggleContent(this)" class="toggle-button">Vezi mai multe</button>
     <div class="content">
         <p>
             În urma numeroaselor sesizări primite prin intermediul platformei noastre online, Primăria Sectorului 1 anunță
@@ -121,15 +139,16 @@
             Mulțumim tuturor cetățenilor care au semnalat această problemă prin intermediul platformei <strong>„România fără dosar”</strong>.
             Împreună putem construi o administrație transparentă, eficientă și apropiată de oameni.
         </p>
-        <p style="text-align: right; margin-top: 30px;">
-            <strong>Primăria Sectorului 1</strong>
-        </p>
+
+        <p style="text-align: right; margin-top: 30px;"><strong>Primăria Sectorului 1</strong></p>
     </div>
 </div>
 
+<!-- Comunicat 2 -->
 <div class="container">
     <h2>Recondiționarea Pieței Pajura</h2>
-    <img src="https://biseq12.github.io/faradosar/577982aa-f144-4477-9cf8-2055592b13d5.jpg" alt="Piața Pajura" class="comunicat-img">
+    <img src="https://biseq12.github.io/faradosar/Piata-Pajura-GF.jpg" alt="Piața Pajura" class="comunicat-img">
+    <button onclick="toggleContent(this)" class="toggle-button">Vezi mai multe</button>
     <div class="content">
         <p>
             În urma semnalărilor repetate venite de la cetățeni prin platforma noastră <strong>„România fără dosar”</strong>, Primăria Sectorului 1 
@@ -153,16 +172,15 @@
             Le mulțumim tuturor celor care au semnalat necesitatea acestei intervenții. Recondiționarea Pieței Pajura este un pas important spre un oraș 
             mai curat, mai funcțional și mai prietenos cu cetățenii săi.
         </p>
-        <p style="text-align: right; margin-top: 30px;">
-            <strong>Primăria Sectorului 1</strong>
-        </p>
+        <p style="text-align: right; margin-top: 30px;"><strong>Primăria Sectorului 1</strong></p>
     </div>
 </div>
 
-
+<!-- Comunicat 3 -->
 <div class="container">
     <h2>Schimbarea liniilor de tramvai</h2>
     <img src="https://biseq12.github.io/faradosar/318897864_558122559659700_6171348106569020947_n.jpeg" alt="Linii de tramvai" class="comunicat-img">
+    <button onclick="toggleContent(this)" class="toggle-button">Vezi mai multe</button>
     <div class="content">
         <p>
             În urma sesizărilor primite prin platforma <strong>„România fără dosar”</strong> și a inspecțiilor efectuate în teren, 
@@ -183,16 +201,16 @@
             Această investiție este vitală pentru fluidizarea transportului public, reducerea poluării și creșterea calității vieții 
             în sector. Ne dorim o infrastructură sigură, eficientă și adaptată cerințelor actuale ale locuitorilor Bucureștiului.
         </p>
-        <p style="text-align: right; margin-top: 30px;">
-            <strong>Primăria Sectorului 1</strong>
-        </p>
+
+        <p style="text-align: right; margin-top: 30px;"><strong>Primăria Sectorului 1</strong></p>
     </div>
 </div>
 
-
+<!-- Comunicat 4 -->
 <div class="container">
     <h2>Reasfaltarea străzilor Ion Mihalache</h2>
     <img src="https://biseq12.github.io/faradosar/WhatsApp-Image-2022-10-19-at-11.52.48-AM-2.jpeg" alt="Străzile Ion Mihalache" class="comunicat-img">
+    <button onclick="toggleContent(this)" class="toggle-button">Vezi mai multe</button>
     <div class="content">
         <p>
             În urma sesizărilor primite prin intermediul platformei <strong>„România fără dosar”</strong>, Primăria Sectorului 1 anunță demararea procesului de reasfaltare a străzilor din cartierul Ion Mihalache. Această zonă a fost semnalată de locuitori ca având o infrastructură rutieră deteriorată, care afectează atât siguranța traficului, cât și confortul locatarilor.
@@ -206,18 +224,25 @@
         <p>
             Proiectul face parte din planul de modernizare continuă a infrastructurii rutiere din Sectorul 1, care vizează îmbunătățirea condițiilor de trafic și reducerea accidentelor. Mulțumim tuturor cetățenilor care au semnalat aceste probleme prin platforma <strong>„România fără dosar”</strong> și îi asigurăm că administrația noastră va continua să răspundă prompt la nevoile lor.
         </p>
-        <p style="text-align: right; margin-top: 30px;">
-            <strong>Primăria Sectorului 1</strong>
-        </p>
+
+        <p style="text-align: right; margin-top: 30px;"><strong>Primăria Sectorului 1</strong></p>
     </div>
 </div>
-
 
 <footer>
     <p>&copy; 2025 Primăria Sectorului 1 București</p>
     <p>Str. Banu Manta nr. 9, Sector 1, București | Telefon: 021 224 41 33 | Email: <a href="mailto:contact@primaria1.ro">contact@primaria1.ro</a></p>
     <p><a href="https://www.primariasector1.ro" target="_blank">www.primariasector1.ro</a></p>
 </footer>
+
+<script>
+    function toggleContent(button) {
+        const content = button.nextElementSibling;
+        const isVisible = content.style.display === "block";
+        content.style.display = isVisible ? "none" : "block";
+        button.textContent = isVisible ? "Vezi mai multe" : "Ascunde";
+    }
+</script>
 
 </body>
 </html>
