--- a/desprenoi.html
+++ b/desprenoi.html
@@ -68,6 +68,14 @@
         footer a:hover {
             text-decoration: underline;
         }
+
+        .pmb-img {
+            width: 100%;
+            max-height: 400px;
+            object-fit: cover;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -76,6 +84,7 @@
     <nav>
         <a href="index.html">Acasă</a>
         <a href="desprenoi.html">Despre noi</a>
+        <a href="comunicate.html">Comunicate de presa</a>
         <a href="contact.html">Contact</a>
         <a href="contulmeu.html">Contul Meu</a>
         <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
@@ -86,6 +95,7 @@
 
 <div class="container">
     <h2>Despre noi</h2>
+    <img src="https://biseq12.github.io/faradosar/primaria-sectorului-1.jpg" alt="PmBS1" class="pmb-img">
     <p>Primăria Sectorului 1 din București este una dintre cele mai importante instituții publice locale din România, cunoscută pentru implicarea activă în modernizarea serviciilor publice și digitalizarea administrației. Misiunea noastră este de a îmbunătăți calitatea vieții cetățenilor prin transparență, eficiență și inovație.</p>
 
     <p>Proiectul <strong>"România fără dosar"</strong> este o inițiativă esențială în lupta împotriva birocrației care a afectat ani la rând funcționarea administrației publice. Mulți cetățeni pierd ore întregi plimbându-se între ghișee, adunând copii după acte deja deținute de stat, confruntându-se cu lipsa unui sistem digital integrat.</p>
