--- a/index.html
+++ b/index.html
@@ -3,93 +3,201 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Primăria Sectorului 1 - Platformă Interactivă</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+            color: #333;
+        }
+
+        header {
+            background-color: #004080;
+            color: white;
+            padding: 30px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 3rem;
+        }
+
+        nav {
+            background-color: #004080;
+            padding: 10px;
+            text-align: right;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            margin: 0 20px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .hero {
+            max-width: 1100px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #005bb5;
+            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+            color: white;
+            text-align: center;
+        }
+
+        .hero h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+
+        .cta-button {
+            background-color: #fcb41e;
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 1.2rem;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        .cta-button:hover {
+            background-color: #e0a10b;
+        }
+
+        .container {
+            max-width: 1100px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        }
+
+        .section-title {
+            text-align: center;
+            color: #004080;
+            font-size: 2rem;
+            margin-bottom: 40px;
+        }
+
+        .services {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 30px;
+        }
+
+        .service-item {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+
+        .service-item h3 {
+            color: #004080;
+            margin-bottom: 15px;
+        }
+
+        .service-item p {
+            font-size: 1rem;
+        }
+
+        footer {
+            background-color: #004080;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        footer a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-links {
+            margin-top: 20px;
+        }
+
+        .footer-links a {
+            margin: 0 10px;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-    <nav class="navbar">
-        <ul>
-            <li><a href="desprenoi.html">Despre noi</a></li>
-            <li><a href="comunicate.html">Comunicate de presa</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="https://www.ghiseul.ro">Ghiseul.ro</a></li>
-
-        </ul>
+    <nav>
+        <a href="index.html">Acasă</a>
+        <a href="desprenoi.html">Despre noi</a>
+        <a href="comunicate.html">Comunicate de presa</a>
+        <a href="contact.html">Contact</a>
+        <a href="contulmeu.html">Contul Meu</a>
+        <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
     </nav>
     <h1>Primăria Sectorului 1</h1>
-    <h4 class="h4top">România fară dosar</h4>
+    <h4>Platformă Interactivă pentru cetățeni</h4>
 </header>
 
-<main>
-    <div class="login-box">
-        <h2>Loghează-te</h2>
-        <form id="loginForm">
-            <input type="text" id="CNP" class="input-field" placeholder="Introdu CNP" required>
-            <input type="password" id="password" class="input-field" placeholder="Introdu parola" required>
-            <button type="submit" class="submit-btn">Logare</button>
-        </form>
-        <div class="register-link">
-            <p>Nu ai cont? <a href="inregistrarecont.html">Înregistrează-te</a></p>
+<div class="hero">
+    <h2>Bun venit pe e-Dosar</h2>
+    <p>O platformă digitală interactivă pentru a îmbunătăți relația dintre administrație și cetățeni</p>
+    <a href="desprenoi.html" class="cta-button">Află mai multe</a>
+</div>
+
+<div class="container">
+    <h2 class="section-title">Servicii disponibile online</h2>
+    <div class="services">
+        <div class="service-item">
+            <h3>Plăți Online</h3>
+            <p>Plătește taxe și impozite online, rapid și sigur, din confortul casei tale.</p>
+        </div>
+        <div class="service-item">
+            <h3>Sesizări și reclamații</h3>
+            <p>Semnalează probleme din cartier sau oferă sugestii pentru îmbunătățirea sectorului.</p>
+        </div>
+        <div class="service-item">
+            <h3>Informații despre proiecte</h3>
+            <p>Rămâi la curent cu proiectele de infrastructură și dezvoltare urbanistică din Sectorul 1.</p>
         </div>
     </div>
-</main>
+</div>
 
-<script>
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
-        event.preventDefault();
+<div class="container">
+    <h2 class="section-title">Cum funcționează platforma</h2>
+    <p>
+        Platforma noastră interactivă permite cetățenilor din Sectorul 1 să acceseze o gamă largă de servicii online. De la plata taxelor, sesizarea problemelor de infrastructură, la consultarea proiectelor și inițiativelor locale, totul este acum la îndemâna ta. În plus, îți oferim transparență și actualizări constante despre modul în care administrația răspunde nevoilor tale.
+    </p>
+</div>
 
-        const CNP = document.getElementById('CNP').value;
-        const password = document.getElementById('password').value;
-
-        const storedUser = localStorage.getItem(CNP);
-        if (!storedUser) {
-            alert('CNP-ul nu există. Te rugăm să te înregistrezi.');
-            window.location.href = 'inregistrarecont.html';
-            return;
-        }
-
-        const user = JSON.parse(storedUser);
-        if (user.password === password) {
-            localStorage.setItem("currentUser", CNP); // Salvăm utilizatorul logat
-            window.location.href = 'contulmeu.html';
-        } else {
-            alert('CNP sau parolă incorectă.');
-        }
-    });
-</script>
-<footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-section">
-        <h4>Primăria Sectorului 1</h4>
-        <p style="color:white">Str. Banu Manta nr. 9, Sector 1, București</p>
-        <p style="color:white">Telefon: 021 319 60 00</p>
-        <p style="color:white">Email: contact@primariasector1.ro</p>
-      </div>
-      <div class="footer-section">
-        <h4>Linkuri utile</h4>
-        <ul>
-          <li><a href="https://primariasector1.ro/">Site oficial</a></li>
-          <li><a href="https://primariasector1.ro/servicii-online/">Servicii online</a></li>
-          <li><a href="https://primariasector1.ro/contact/">Contact</a></li>
-          <li><a href="https://primariasector1.ro/transparenta/">Transparență</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Urmărește-ne</h4>
-        <ul>
-          <li><a href="https://www.facebook.com/primariasectorului1/">Facebook</a></li>
-          <li><a href="https://www.instagram.com/primariasector1/">Instagram</a></li>
-          <li><a href="https://www.youtube.com/channel/UCPrimariaSector1">YouTube</a></li>
-        </ul>
-      </div>
+<footer>
+    <p>&copy; 2025 Primăria Sectorului 1 București</p>
+    <p>Str. Banu Manta nr. 9, Sector 1, București | Telefon: 021 224 41 33 | Email: <a href="mailto:contact@primaria1.ro">contact@primaria1.ro</a></p>
+    <div class="footer-links">
+        <a href="https://www.primariasector1.ro" target="_blank">www.primariasector1.ro</a>
+        <a href="desprenoi.html">Despre noi</a>
+        <a href="contact.html">Contact</a>
     </div>
-    <div class="footer-bottom">
-      <p style="color:white">&copy; 2025 Primăria Sectorului 1. Toate drepturile rezervate.</p>
-    </div>
-  </footer>
-  
+</footer>
 
 </body>
 </html>
