--- a/inregistrarecont.html
+++ b/inregistrarecont.html
@@ -9,16 +9,18 @@
 <body>
 
     <header>
-        <h1>Înregistrare cont</h1>
-        <hr color="white" style="padding-top: 3px; margin-top: 1.5rem; border-radius: 3rem;">
         <nav class="navbar">
             <ul>
+                <li><a href="index.html">Acasă</a></li>
                 <li><a href="desprenoi.html">Despre noi</a></li>
+                <li><a href="comunicate.html">Comunicate de presa</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="contulmeu.html">Contul Meu</a></li>
                 <li><a href="https://www.ghiseul.ro">Ghiseul.ro</a></li>
     
             </ul>
         </nav>
+        <h1>Înregistrare cont</h1>
     </header>
 
     <main>
