--- a/inregistrare.html
+++ b/inregistrare.html
@@ -9,25 +9,21 @@
 <body>
 
 <header>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Acasa</a></li>
-            <li><a href="desprenoi.html">Despre noi</a></li>
-            <li><a href="comunicate.html">Comunicate de presa</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="https://www.ghiseul.ro">Ghiseul.ro</a></li>
-
-        </ul>
+    <nav>
+        <a href="index.html">Acasă</a>
+        <a href="desprenoi.html">Despre noi</a>
+        <a href="comunicate.html">Comunicate de presa</a>
+        <a href="contact.html">Contact</a>
+        <a href="contulmeu.html">Contul Meu</a>
+        <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
     </nav>
-    <h1>Primăria Sectorului 1</h1>
-    <h4 class="h4top">România fară dosar</h4>
 </header>
 
 <main>
     <div class="login-box">
         <h2>Loghează-te</h2>
         <form id="loginForm">
-            <input type="text" id="CNP" class="input-field" placeholder="Introdu CNP" required>
+            <input type="text" id="USERDATA" class="input-field" placeholder="Introdu utilizatorul" required>
             <input type="password" id="password" class="input-field" placeholder="Introdu parola" required>
             <button type="submit" class="submit-btn">Logare</button>
         </form>
@@ -41,33 +37,49 @@
     document.getElementById('loginForm').addEventListener('submit', function(event) {
         event.preventDefault();
 
-        const CNP = document.getElementById('CNP').value;
+        const USERDATA = document.getElementById('USERDATA').value;
         const password = document.getElementById('password').value;
 
-        const storedUser = localStorage.getItem(CNP);
+        const storedUser = localStorage.getItem(USERDATA);
         if (!storedUser) {
-            alert('CNP-ul nu există. Te rugăm să te înregistrezi.');
+            alert('Utilizatorul nu există. Te rugăm să te înregistrezi.');
             window.location.href = 'inregistrarecont.html';
             return;
         }
 
         const user = JSON.parse(storedUser);
         if (user.password === password) {
-            localStorage.setItem("currentUser", CNP); // Salvăm utilizatorul logat
+            localStorage.setItem("currentUser", USERDATA); // Salvăm utilizatorul logat
             window.location.href = 'contulmeu.html';
         } else {
-            alert('CNP sau parolă incorectă.');
+            alert('Utilizator sau parolă incorectă.');
+        }
+    });
+
+    window.addEventListener("scroll", function() {
+        const nav = document.querySelector("nav");
+        if (window.scrollY > 50) {
+            nav.classList.add("scrolled");
+        } else {
+            nav.classList.remove("scrolled");
         }
     });
 </script>
 <footer class="site-footer">
     <div class="footer-container">
+      <div class="footer-section logo-section">
+        <a href="https://primariasector1.ro" target="_blank">
+          <img src="/LOGO-PS1-2023_vector-ALB.png" alt="Sigla" class="footer-logo">
+        </a>
+      </div>
+    
       <div class="footer-section">
         <h4>Primăria Sectorului 1</h4>
         <p style="color:white">Str. Banu Manta nr. 9, Sector 1, București</p>
         <p style="color:white">Telefon: 021 319 60 00</p>
         <p style="color:white">Email: contact@primariasector1.ro</p>
       </div>
+    
       <div class="footer-section">
         <h4>Linkuri utile</h4>
         <ul>
@@ -77,19 +89,8 @@
           <li><a href="https://primariasector1.ro/transparenta/">Transparență</a></li>
         </ul>
       </div>
-      <div class="footer-section">
-        <h4>Urmărește-ne</h4>
-        <ul>
-          <li><a href="https://www.facebook.com/primariasectorului1/">Facebook</a></li>
-          <li><a href="https://www.instagram.com/primariasector1/">Instagram</a></li>
-          <li><a href="https://www.youtube.com/channel/UCPrimariaSector1">YouTube</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p style="color:white">&copy; 2025 Primăria Sectorului 1. Toate drepturile rezervate.</p>
-    </div>
-  </footer>
+  
+    </footer>
   
 
 </body>
