--- a/comunicate.html
+++ b/comunicate.html
@@ -348,7 +348,7 @@ nav a.active {
     <div class="footer-container">
       <div class="footer-section logo-section">
         <a href="https://primariasector1.ro" target="_blank">
-          <img src="/LOGO-PS1-2023_vector-ALB.png" alt="Sigla" class="footer-logo">
+          <img src="https://biseq12.github.io/faradosar/LOGO-PS1-2023_vector-ALB.png" alt="Sigla" class="footer-logo">
         </a>
       </div>
     
