--- a/comunicate.html
+++ b/comunicate.html
@@ -221,7 +221,7 @@ nav a.active {
     <nav>
         <a href="index.html">Acasă</a>
         <a href="desprenoi.html">Despre noi</a>
-        <a href="comunicate.html" class="active">Comunicate de presa</a>
+        <a href="comunicate.html" class="active">Comunicate de presă</a>
         <a href="contact.html">Contact</a>
         <a href="contulmeu.html">Contul Meu</a>
         <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
