--- a/contulmeu.html
+++ b/contulmeu.html
@@ -39,7 +39,7 @@
 
         <!-- Secțiunile aplicației -->
         <div id="eliberareAdeverinte" class="section-content">
-            <h3>Eliberare Adeverinte</h3>
+            <h3>Eliberare Adeverințe</h3>
             <ul>
                 <li><label for="carteIdentitate">Carte de Identitate: </label><input type="file" id="carteIdentitate"></li>
                 <li><label for="certificatNastere">Certificat de Naștere: </label><input type="file" id="certificatNastere"></li>
@@ -60,7 +60,7 @@
                 </li>
                 
             </ul>
-            <button onclick="submitAdeverinte()">Trimite Adeverinte</button>
+            <button onclick="submitAdeverinte()">Trimite Adeverințe</button>
         </div>
 
         <div id="evidentaFiscala" class="section-content">
