--- a/desprenoi.html
+++ b/desprenoi.html
@@ -194,7 +194,7 @@ nav a.active {
     <nav>
         <a href="index.html">Acasă</a>
         <a href="desprenoi.html" class="active">Despre noi</a>
-        <a href="comunicate.html">Comunicate de presa</a>
+        <a href="comunicate.html">Comunicate de presă</a>
         <a href="contact.html">Contact</a>
         <a href="contulmeu.html">Contul Meu</a>
         <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
