--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@ nav a.active {
         <nav>
             <a href="index.html">Acasă</a>
             <a href="desprenoi.html">Despre noi</a>
-            <a href="comunicate.html">Comunicate de presa</a>
+            <a href="comunicate.html">Comunicate de presă</a>
             <a href="contact.html" class="active">Contact</a>
             <a href="contulmeu.html">Contul Meu</a>
             <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
