--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ nav a.active {
     <nav>
         <a href="index.html" class="active">Acasă</a>
         <a href="desprenoi.html">Despre noi</a>
-        <a href="comunicate.html">Comunicate de presa</a>
+        <a href="comunicate.html">Comunicate de presă</a>
         <a href="contact.html">Contact</a>
         <a href="contulmeu.html">Contul Meu</a>
         <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
