--- a/inregistrarecont.html
+++ b/inregistrarecont.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="index.html">Acasă</a>
             <a href="desprenoi.html">Despre noi</a>
-            <a href="comunicate.html">Comunicate de presa</a>
+            <a href="comunicate.html">Comunicate de presă</a>
             <a href="contact.html">Contact</a>
             <a href="contulmeu.html">Contul Meu</a>
             <a href="https://www.ghiseul.ro">Ghiseul.ro</a>
